--- a/finished-app/src/index.css
+++ b/finished-app/src/index.css
@@ -193,3 +193,13 @@
 }
 
 /* ===== ExplainUseEffect Styles End =====*/
+
+/* ===== ExplainProps Styles =====*/
+
+.explain-props {
+    min-height: 100vh;
+    width: 100vw;
+    background-color: var(--vin-6);
+}
+
+/* ===== ExplainProps Styles End =====*/
